--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,30 @@
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .App {
   text-align: center;
+}
+
+@keyframes background-pan {
+  from {
+    background-position: 0% center;
+  }
+  to {
+    background-position: -200% center;
+  }
+}
+
+.become-one {
+  animation: background-pan 3s linear infinite;
+  background: linear-gradient(to right, purple, violet, purple);
+  background-size: 200%;
+  background-clip: text;
+  color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .App-logo {
