--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,19 @@ body::-webkit-scrollbar-thumb:hover {
   background: #067430;
 }
 
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateY(-25vh);
+  transition: all 500ms cubic-bezier(0.41, -0.11, 0.35, 1.21);
+}
+.visible {
+  opacity: 1;
+  filter: blur(0px);
+  transform: translateY(0);
+  transition: all 500ms cubic-bezier(0.41, -0.11, 0.35, 1.21);
+}
+
 .App {
   text-align: center;
 }
