--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,16 @@
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
-body::-webkit-scrollbar {
+main::-webkit-scrollbar {
   width: 0.25rem;
 }
-body::-webkit-scrollbar-track {
-  background: #313131;
+main::-webkit-scrollbar-track {
+  background: #303030;
 }
-body::-webkit-scrollbar-thumb {
+main::-webkit-scrollbar-thumb {
   background: #0cf867;
 }
-body::-webkit-scrollbar-thumb:hover {
+main::-webkit-scrollbar-thumb:hover {
   background: #067430;
 }
 
@@ -22,12 +22,24 @@ body::-webkit-scrollbar-thumb:hover {
   opacity: 0;
   filter: blur(5px);
   transform: translateY(-40vh);
-  transition: all 500ms cubic-bezier(0.41, -0.11, 0.35, 1.21);
+  transition: all 250ms cubic-bezier(0.41, -0.11, 0.35, 1.21);
 }
 .visible {
   opacity: 1;
   filter: blur(0px);
   transform: translateY(0);
+  transition: all 500ms cubic-bezier(0.41, -0.11, 0.35, 1.21);
+}
+.final-hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: scale(200%);
+  transition: all 500ms cubic-bezier(0.41, -0.11, 0.35, 1.21);
+}
+.final-visible {
+  opacity: 1;
+  filter: blur(0px);
+  transform: scale(100%);
   transition: all 500ms cubic-bezier(0.41, -0.11, 0.35, 1.21);
 }
 
@@ -65,6 +77,13 @@ body::-webkit-scrollbar-thumb:hover {
   }
 }
 
+main {
+  height: 100vh;
+  scroll-snap-type: y mandatory;
+}
+main > section {
+  scroll-snap-align: start;
+}
 .section {
   background: #303030;
   min-height: 100vh;
