--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ main > section {
   scroll-snap-align: start;
 }
 section {
+  font: bold;
   background: #303030;
   min-height: 100vh;
   display: flex;
