making h2 into a comments sort of thing

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,14 @@ main::-webkit-scrollbar-thumb:hover {
   }
 }
 
+h2 {
+  color: gray;
+  font-style: italic;
+}
+h2::before {
+  content: "// ";
+}
+
 .become-one {
   animation: background-pan 3s linear infinite;
   background: linear-gradient(to right, #0cf867, #01f0e3, #0cf867);
