hoping to make the scroll button move into the screen and out

--- a/src/App.css
+++ b/src/App.css
@@ -111,7 +111,7 @@ section {
   }
 }
 
-.scroll {
+.scroll-visible {
   height: 50px;
   width: 30px;
   border: 2px solid #fefefe;
@@ -120,9 +120,15 @@ section {
   bottom: 20px;
   border-radius: 999px;
   cursor: pointer;
+  transition: all 2s cubic-bezier(0.41, -0.11, 0.35, 1.21);
+  transform: translateY(0);
 }
-.scroll::before,
-.scroll::after {
+.scroll-hidden {
+  transform: translateY(-1vh);
+  transition: all 2s cubic-bezier(0.41, -0.11, 0.35, 1.21);
+}
+.scroll-visible::before,
+.scroll-visible::after {
   content: "";
   position: absolute;
   top: 20%;
