--- a/src/App.css
+++ b/src/App.css
@@ -120,10 +120,12 @@ section {
   bottom: 20px;
   border-radius: 999px;
   cursor: pointer;
+  opacity: 1;
   transition: all 2s cubic-bezier(0.41, -0.11, 0.35, 1.21);
   transform: translateY(0);
 }
 .scroll-hidden {
+  opacity: 0;
   transform: translateY(-1vh);
   transition: all 2s cubic-bezier(0.41, -0.11, 0.35, 1.21);
 }
