--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,9 @@ section {
   transition: all 2s cubic-bezier(0.41, -0.11, 0.35, 1.21);
 }
 .scroll-visible::before,
-.scroll-visible::after {
+.scroll-visible::after,
+.scroll-hidden::before,
+.scroll-hidden::after {
   content: "";
   position: absolute;
   top: 20%;
@@ -144,7 +146,8 @@ section {
   border-left: transparent;
   animation: scroll 1s ease-in-out infinite;
 }
-.scroll::after {
+.scroll-visible::after,
+.scroll-hidden::after {
   top: 40%;
   animation-delay: 0.3s;
 }
