--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,13 @@ main::-webkit-scrollbar-thumb:hover {
   background: #067430;
 }
 
+/* SUBHEADER */
 .sub {
   font-size: 1.5rem;
   color: #808080;
 }
 
+/* the WDYM? thing */
 .hidden {
   opacity: 0;
   filter: blur(5px);
