--- a/src/App.css
+++ b/src/App.css
@@ -22,13 +22,13 @@ main::-webkit-scrollbar-thumb:hover {
   background: #067430;
 }
 
-.grid-container {
+.card-container {
   margin-top: 2rem;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
 }
-.grid-icon {
+.card {
   filter: drop-shadow(0 5px 4px rgb(0 0 0 / 0.3))
     drop-shadow(0 3px 3px rgb(0 0 0 / 0.07));
   margin-bottom: 8px;
