moving stuff around

--- a/src/App.css
+++ b/src/App.css
@@ -22,15 +22,17 @@ main::-webkit-scrollbar-thumb:hover {
   background: #067430;
 }
 
-/* cards in "things to remember" */
 .source {
   font-style: italic;
   color: #606060;
   text-decoration: underline;
   font-size: 0.75rem;
   margin-top: 10px;
-}.source::before {
-  content: 'from '
+}
+
+/* cards in "things to remember" */
+.source::before {
+  content: "from ";
 }
 .card-text {
   margin-top: 10px;
