--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ main::-webkit-scrollbar-thumb:hover {
   content: "from ";
 }
 .card-text {
+  font-weight: 600;
   margin-top: 10px;
   font-size: 1rem;
   word-wrap: normal;
@@ -49,7 +50,7 @@ main::-webkit-scrollbar-thumb:hover {
 .card {
   filter: drop-shadow(0 5px 4px rgb(0 0 0 / 0.3))
     drop-shadow(0 3px 3px rgb(0 0 0 / 0.07));
-  margin-bottom: 8px;
+  margin-bottom: 10px;
   background: #24292f;
   border-radius: 8px;
   height: 25rem;
