--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 * {
+  text-transform: lowercase;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
   overflow-x: hidden;
   font-family: "Inter", sans-serif;
+}
+*::selection {
+  background: #0cf867;
+  color: #fefefe;
 }
 html {
   background: #1b1f24;
@@ -31,7 +36,15 @@ main::-webkit-scrollbar-thumb:hover {
   transition: all 0.25s;
 }
 .source:hover {
-  color: #0cf867;
+  text-decoration: underline;
+  animation: background-pan 3s linear infinite;
+  background: linear-gradient(to right, #0cf867, #01f0e3, #0cf867);
+  background-size: 200%;
+  background-clip: text;
+  color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.25s;
 }
 .source::before {
   content: "from ";
@@ -40,7 +53,7 @@ main::-webkit-scrollbar-thumb:hover {
 /* cards in "things to remember" */
 .card-text {
   font-weight: 600;
-  margin-top: 10px;
+  margin-top: 4px;
   font-size: 1rem;
   word-wrap: normal;
 }
@@ -53,6 +66,7 @@ main::-webkit-scrollbar-thumb:hover {
 }
 .card-title {
   border-bottom: #30363d 1px solid;
+  padding-bottom: 4px;
 }
 .card {
   filter: drop-shadow(0 5px 4px rgb(0 0 0 / 0.3))
