--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,8 @@ main::-webkit-scrollbar-thumb:hover {
   word-wrap: normal;
 }
 .card-container {
+  justify-content: center;
+  width: 100%;
   overflow: auto;
   text-align: left;
   margin-top: 2rem;
