--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,17 @@ main::-webkit-scrollbar-thumb:hover {
   content: "from ";
 }
 
+.remember-hidden {
+  opacity: 0;
+  transform: translateY(-5vh);
+  transition: all 0.5s;
+}
+.remember-visible {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.5s;
+}
+
 /* cards in "things to remember" */
 .card-text {
   font-weight: 600;
@@ -66,7 +77,7 @@ main::-webkit-scrollbar-thumb:hover {
   border-bottom: #30363d 1px solid;
   padding-bottom: 4px;
 }
-.card {
+.card-visible {
   filter: drop-shadow(0 5px 4px rgb(0 0 0 / 0.3))
     drop-shadow(0 3px 3px rgb(0 0 0 / 0.07));
   margin-bottom: 10px;
@@ -77,6 +88,24 @@ main::-webkit-scrollbar-thumb:hover {
   border: #30363d 1px solid;
   padding: 10px;
   margin-left: 1.5rem;
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.5s;
+}
+.card-hidden {
+  filter: drop-shadow(0 5px 4px rgb(0 0 0 / 0.3))
+    drop-shadow(0 3px 3px rgb(0 0 0 / 0.07));
+  margin-bottom: 10px;
+  background: #24292f;
+  border-radius: 8px;
+  height: calc(50vh + 10px);
+  width: calc(35vh + 20px);
+  border: #30363d 1px solid;
+  padding: 10px;
+  margin-left: 1.5rem;
+  opacity: 0;
+  transform: translateY(10vh);
+  transition: all 0.5s;
 }
 
 /* SUBHEADER */
